# rlc-cloud-repos

./: .gitignore  .packit.yaml  COMMUNITY.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  setup.cfg  setup.py
.github/workflows/: ci.yml  gitlab-mr.yml  release.yml
cloud-repos/rlc/cloud_repos/: __init__.py  cloud_metadata.py  dnf_vars.py  log_utils.py  main.py  plugins.py  repo_config.py
cloud-repos/rlc/cloud_repos/providers/: __init__.py  aws.py
config/: sample.sh.template
data/: ciq-mirrors.yaml
docs/: complete.sh.template  simple.sh.template
framework/: setup.cfg
rpm/: python3-rlc-cloud-repos.spec.in
tests/: conftest.py  test_cloud_metadata.py  test_dnf_vars.py  test_log_utils.py  test_main.py  test_plugins.py  test_repo_config.py
tests/providers/: test_providers.py
