[metadata]
name = rlc.cloud-repos
version = 0.2.1
description = A cloud-init querying and repository configuration tool for Rocky Linux from CIQ Products (RLC)
long_description = file: README.md
author = CIQ Linux Engineering
author_email = support@ciq.com
license = MIT
url = https://github.com/ctrliq/rlc-cloud-repos

[options]
package_dir =
    = cloud-repos
packages = find:
namespace_packages = rlc
python_requires = >=3.6,<3.14
include_package_data = true
install_requires =
    PyYAML
    setuptools>=40.6.0,<60; python_version=='3.6'
    setuptools>=40.6.0; python_version>'3.6'

[options.packages.find]
where = cloud-repos
include = rlc*

[options.entry_points]
console_scripts =
    rlc-cloud-repos = rlc.cloud_repos.main:main

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    flake8
    isort
    black
    build>=0.9.0

[tool:black]
line-length = 120

[tool:isort]
# Directories to be sorted by isort
src_paths = cloud-repos, framework, tests
skip = ./.cache
py_version = 36
line_length = 120

[pip]
editable-mode = compat

[flake8]
max-line-length = 120

[tool:pytest]
markers =
    mirrors_get: Marks a test as requiring Internet access to the mirrors.
addopts =
    -m "not mirrors_get"
